force-app/main/default/objects/NTB_Customer__c/NTB_Customer__c.object-meta.xml
<CustomObject>
    <description>eSalesManager の Raedata 取り込み用（エラー検出目的）</description>
    <label>日東紡マテ_カスタマーシート</label>
    <nameField>
        <label>取引先名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>