force-app/main/default/objects/NTB_Customer__c/fields/CD__c.field-meta.xml
<CustomField>
    <fullName>CD__c</fullName>
    <label>取引先CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>