force-app/main/default/objects/NTB_Customer__c/fields/CusType__c.field-meta.xml
<CustomField>
    <fullName>CusType__c</fullName>
    <label>ユーザーコード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>