force-app/main/default/objects/NTB_Customer__c/fields/FAX__c.field-meta.xml
<CustomField>
    <fullName>FAX__c</fullName>
    <label>FAX番号</label>
    <type>Phone</type>
</CustomField>