force-app/main/default/objects/NTB_Customer__c/fields/Field107__c.field-meta.xml
<CustomField>
    <fullName>Field107__c</fullName>
    <label>削除</label>
    <length>255</length>
    <type>Text</type>
</CustomField>