force-app/main/default/objects/NTB_Customer__c/fields/Field120__c.field-meta.xml
<CustomField>
    <fullName>Field120__c</fullName>
    <label>主担当(自社担当部署)部署番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>