force-app/main/default/objects/NTB_Customer__c/fields/Field145__c.field-meta.xml
<CustomField>
    <fullName>Field145__c</fullName>
    <label>カスタマーシートコード（法人）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>