force-app/main/default/objects/NTB_Customer__c/fields/Field886_1__c.field-meta.xml
<CustomField>
    <fullName>Field886_1__c</fullName>
    <label>納品先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>