force-app/main/default/objects/NTB_Customer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field145__c</columns>
    <columns>Field918__c</columns>
    <columns>Field784__c</columns>
    <columns>Field567__c</columns>
    <columns>Field635__c</columns>
    <columns>Field849__c</columns>
    <columns>Field979__c</columns>
    <columns>Field785__c</columns>
    <columns>FAX__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべてのレコード</label>
</ListView>